recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: type mismatch;
 found   : Unit
 required: java.awt.Color
    setColor(current(steps))
                    ^Tree:10: error: type mismatch;
 found   : Unit
 required: java.awt.Color
    setColor(current(steps))
                    ^